# SO_19-20

./: README.md
SESO/: CMakeLists.txt
SESO-documentation/: leeme.txt
SESO/projects/seso/: CMakeLists.txt
SESO/projects/seso/src/: main.c
bzero/: bzero.c
